# tagmemo

./: .gitignore  index.html  pyproject.toml
.github/: copilot-instructions.md
assets/: index-BkE5L8GV.js  index-CYqI1rb_.css  index-D2s3GUC-.js  index-QojAX5Ke.css
cfn/tagmemo/: sam.sh  template.yaml
cfn/tagmemo/auth/: samconfig.yaml  template.yaml
cfn/tagmemo/auth/cfn_params/: param_dev.json  param_prd.json
cfn/tagmemo/auth/src/app/: lambda_function.py
cfn/tagmemo/auth/tagsrc/app/: lambda_function.py
cfn/tagmemo/src/app/: lambda_function.py  requirements.txt
cfn/tagmemo/src/app/values/: __init__.py
cfn/tagmemo/tag/: samconfig.yaml  template.yaml
infra/infra-layer/common/: samconfig.toml  template.yaml
tagmemo/: .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
tagmemo/docs/: index.html
tagmemo/docs/assets/: index-CTKAkTUn.js
tagmemo/src/: App.vue  main.ts  style.css
tagmemo/src/assets/: base.css  main.css
tagmemo/src/components/: AccountMenu.vue  Alert.vue  AuthCommon.vue  HeaderView.vue  StarryBackGround.vue  WelcomeView.vue
tagmemo/src/components/__tests__/: HelloWorld.spec.ts
tagmemo/src/locales/: en.json  ja.json
tagmemo/src/router/: index.ts
tagmemo/src/stores/: AuthCommon.ts
tagmemo/src/views/: Account.vue  Home.vue  HomeView.vue  Login.vue  LoginView.vue  NotFound.vue  Profile.vue  Register.vue
