[tool.poetry]
name = "tagmemo"
version = "0.1.0"
description = ""
authors = ["Ryo Suzuki <astronautryosuzuki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
aws-lambda-powertools = "^3.2.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
