[tool.poetry]
name = "tagmemo"
version = "0.1.0"
description = ""
authors = ["Ryo Suzuki <astronautryosuzuki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
aws-lambda-powertools = "^3.2.0"
pandas = "^2.2.3"
boto3 = "^1.35.54"
python-decouple = "^3.8"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
